code cleanup and minor fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,7 +4,7 @@
   "send_message": "Get in touch",
   "hello": "Hello,",
   "im_eduardo": "I'm Eduardo Dourado;",
-  "bio": "a student really interested in AI and full-stack development. I focus on efficiency and seek a positive environment for everyone!",
+  "bio": "a Computer Science student and a backend-focused Full-Stack Developer. I seek challenges to apply and expand my knowledge in system architectures, API development, and high-impact solutions",
   "showcase_title": "Selected Projects",
   "showcase_subtitle": "A collection of my most exciting and key projects, showcasing my skills and efficiency.",
   "case_study": "View on GitHub",
