--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,7 +4,7 @@
   "send_message": "Entre em contato",
   "hello": "Olá,",
   "im_eduardo": "sou Eduardo Dourado;",
-  "bio": "um estudante muito interessado em IA e desenvolvimento full-stack. Foco em eficiência e busco um ambiente positivo para todos!",
+  "bio": "um estudante de Ciência da Computação e desenvolvedor Full-Stack com foco em backend. Busco desafios para aplicar e expandir meus conhecimentos em arquiteturas de sistemas, desenvolvimento de APIs e soluções de alto impacto",
   "showcase_title": "Projetos Selecionados",
   "showcase_subtitle": "Uma coleção dos meus projetos mais importantes, mostrando minhas habilidades e eficiência.",
   "case_study": "Ver no GitHub",
