--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -6,14 +6,14 @@
   "im_eduardo": "I'm Eduardo Dourado;",
   "bio": "a Computer Science student and a backend-focused Full-Stack Developer. I seek challenges to apply and expand my knowledge in system architectures, API development, and high-impact solutions",
   "showcase_title": "Selected Projects",
-  "showcase_subtitle": "A collection of my most exciting and key projects, showcasing my skills and efficiency.",
+  "showcase_subtitle": "A collection of my most exciting and key projects, showcasing my skills and efficiency",
   "case_study": "View on GitHub",
   "project1_title": "Memphis",
   "project1_description": "Integrating knowledge, culture, and practice, Memphis is a scalable music platform. It uses Node.js, Express & MongoDB in a layered architecture, containerization with Docker, JWT authentication, and integration with Spotify",
   "project2_title": "Cairo",
   "project2_description": "Cairo is a food ordering system focused on speed and simplicity, built upon a 100% RESTful API. It features Next.js + TypeScript, Prisma for ORM, Zod for validation, PostgreSQL as the database, and payments via Stripe",
   "details_title": "Details",
-  "details_subtitle": "Here's a closer look at the tools and technologies I'm currently using to bring to life ideas. From frontend and backend integrations to data analysis, problem-solving and different design approaches.",
+  "details_subtitle": "Here's a closer look at the tools and technologies I'm currently using to bring to life ideas. From frontend and backend integrations to data analysis, problem-solving and different design approaches",
   "skill1": "HTML, CSS",
   "skill2": "JavaScript (and TypeScript), Python",
   "skill3": "Django, React, Next.js, Prisma",
