--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -6,14 +6,14 @@
   "im_eduardo": "sou Eduardo Dourado;",
   "bio": "um estudante de Ciência da Computação e desenvolvedor Full-Stack com foco em backend. Busco desafios para aplicar e expandir meus conhecimentos em arquiteturas de sistemas, desenvolvimento de APIs e soluções de alto impacto",
   "showcase_title": "Projetos Selecionados",
-  "showcase_subtitle": "Uma coleção dos meus projetos mais importantes, mostrando minhas habilidades e eficiência.",
+  "showcase_subtitle": "Uma coleção dos meus projetos mais importantes, mostrando minhas habilidades e eficiência",
   "case_study": "Ver no GitHub",
   "project1_title": "Memphis",
   "project1_description": "Integrando conhecimento, cultura e prática, o Memphis é uma plataforma musical escalável e de fácil manutenção. Usei Node.js, Express e MongoDB em uma arquitetura em camadas (Services, DAOs, Controllers), containerização completa com Docker, autenticação JWT, painel administrativo e integração com o Spotify",
   "project2_title": "Cairo",
   "project2_description": "Cairo é um sistema de pedidos de comida focado em velocidade e simplicidade, operando sobre uma API 100% RESTful. Segue boas práticas de design e arquitetura com Next.js + TypeScript, Prisma para ORM, Zod para validação tipada de dados, PostgreSQL como banco, e pagamentos processados via Stripe",
   "details_title": "Detalhes",
-  "details_subtitle": "Aqui está uma visão mais detalhada das ferramentas e tecnologias que estou usando atualmente para dar vida às ideias. Desde integrações frontend e backend até análise de dados, resolução de problemas e diferentes abordagens de design.",
+  "details_subtitle": "Aqui está uma visão mais detalhada das ferramentas e tecnologias que estou usando atualmente para dar vida às ideias. Desde integrações frontend e backend até análise de dados, resolução de problemas e diferentes abordagens de design",
   "skill1": "HTML, CSS",
   "skill2": "JavaScript (e TypeScript), Python",
   "skill3": "Django, React, Next.js, Prisma",
