code cleanup and minor fixes

--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,7 +4,7 @@
   "send_message": "Entre em contato",
   "hello": "Olá,",
   "im_eduardo": "sou Eduardo Dourado;",
-  "bio": "um estudante de Ciência da Computação e desenvolvedor Full-Stack com foco em backend. Busco desafios para aplicar e expandir meus conhecimentos em arquiteturas de sistemas, desenvolvimento de APIs e soluções de alto impacto",
+  "bio": "Backend-focused Full-Stack Developer specializing in building robust and scalable APIs with Python (Django) and Node.js. Experienced in microservices architecture, PostgreSQL data modeling, and complex transactional systems. Proven ability in developing authentication systems, data management solutions, and business logic, along with integrating external services and optimizing internal workflows. Seeking to leverage my skills to create high-impact solutions that merge efficiency, security, and user experience.",
   "showcase_title": "Projetos Selecionados",
   "showcase_subtitle": "Uma coleção dos meus projetos mais importantes, mostrando minhas habilidades e eficiência",
   "case_study": "Ver no GitHub",
