code cleanup and minor fixes

--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -4,7 +4,7 @@
   "send_message": "Get in touch",
   "hello": "Hello,",
   "im_eduardo": "I'm Eduardo Dourado;",
-  "bio": "a Computer Science student and a backend-focused Full-Stack Developer. I seek challenges to apply and expand my knowledge in system architectures, API development, and high-impact solutions",
+  "bio": "Backend-focused Full-Stack Developer specializing in building robust and scalable APIs with Python (Django) and Node.js. Experienced in microservices architecture, PostgreSQL data modeling, and complex transactional systems. Proven ability in developing authentication systems, data management solutions, and business logic, along with integrating external services and optimizing internal workflows. Seeking to leverage my skills to create high-impact solutions that merge efficiency, security, and user experience.",
   "showcase_title": "Selected Projects",
   "showcase_subtitle": "A collection of my most exciting and key projects, showcasing my skills and efficiency",
   "case_study": "View on GitHub",
