--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -4,7 +4,7 @@
   "send_message": "Entre em contato",
   "hello": "Olá,",
   "im_eduardo": "sou Eduardo Dourado;",
-  "bio": "Backend-focused Full-Stack Developer specializing in building robust and scalable APIs with Python (Django) and Node.js. Experienced in microservices architecture, PostgreSQL data modeling, and complex transactional systems. Proven ability in developing authentication systems, data management solutions, and business logic, along with integrating external services and optimizing internal workflows. Seeking to leverage my skills to create high-impact solutions that merge efficiency, security, and user experience.",
+  "bio": "Desenvolvedor Full-Stack com ênfase em Backend, especializado na construção de APIs robustas e escaláveis com Python (Django) e Node.js. Tenho experiência prática em arquitetura de microsserviços, modelagem de dados com PostgreSQL e desenvolvimento de sistemas transacionais complexos. Atuei no desenvolvimento de sistemas de autenticação, gestão de dados e lógica de negócios, além de integrações com serviços externos e otimização de fluxos internos. Busco aplicar minhas habilidades para criar soluções de alto impacto que unam eficiência, segurança e experiência do usuário.",
   "showcase_title": "Projetos Selecionados",
   "showcase_subtitle": "Uma coleção dos meus projetos mais importantes, mostrando minhas habilidades e eficiência",
   "case_study": "Ver no GitHub",
