--- a/public/locales/en/translation.json
+++ b/public/locales/en/translation.json
@@ -19,16 +19,7 @@
   "project3_description": "Oslo is designed for maximum efficiency. Practice with questions, review your mistakes and organize your knowledge. Built on the Next.js and TypeScript ecosystem, the project uses Server Components, Server Actions, Tailwind CSS and Radix UI to be intuitive and responsive, delivering consistency across any device.",
 
   "details_title": "Details",
-  "details_subtitle": "Here's a closer look at the tools and technologies I'm currently using to bring to life ideas. From frontend and backend integrations to data analysis, problem-solving and different design approaches.",
-
-  "skill1": "JavaScript & TypeScript",
-  "skill2": "React, Next.js & Tailwind CSS",
-  "skill3": "Node.js & PHP",
-  "skill4": "Python & Django",
-  "skill5": "PostgreSQL, MongoDB & SQL",
-  "skill6": "Docker, Git & GitHub",
-  "skill7": "AI/ML: TensorFlow & Scikit-Learn",
-  "skill8": "UI/UX Design",
+  "details_subtitle": "Here's a closer look at the tools and technologies I'm currently using to bring to life ideas.",
   
   "thank_you": "Thanks for making it all the way here!",
   "footer_subtitle": "If you'd like to talk, feel free to send me a message (I'm always up for hearing new stories : ):",
