--- a/public/locales/pt/translation.json
+++ b/public/locales/pt/translation.json
@@ -19,16 +19,7 @@
   "project3_description": "Oslo é projetado para máxima eficiência. Pratique com questões, revise seus erros e organize seu conhecimento. Construído sobre o ecossistema Next.js e TypeScript, o projeto utiliza Server Components, Server Actions, Tailwind CSS e Radix UI para ser intuitivo e responsivo, proporcionando consistência em qualquer dispositivo.",
   
   "details_title": "Detalhes",
-  "details_subtitle": "Aqui está uma visão mais detalhada das ferramentas e tecnologias que estou usando atualmente para dar vida às ideias. Desde integrações frontend e backend até análise de dados, resolução de problemas e diferentes abordagens de design.",
-
-  "skill1": "JavaScript & TypeScript",
-  "skill2": "React, Next.js & Tailwind CSS",
-  "skill3": "Node.js & PHP",
-  "skill4": "Python & Django",
-  "skill5": "PostgreSQL, MongoDB & SQL",
-  "skill6": "Docker, Git & GitHub",
-  "skill7": "IA/ML: TensorFlow & Scikit-Learn",
-  "skill8": "UI/UX Design",
+  "details_subtitle": "Aqui está uma visão mais detalhada do que estou usando atualmente para dar vida às ideias.",
 
   "thank_you": "Obrigado por chegar até aqui!",
   "footer_subtitle": "Caso queira conversar, sinta-se à vontade para me enviar uma mensagem (estou sempre aberto a ouvir novas histórias : ):",
